--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
     ],
     "require": {
         "php" : "^7.2",
-        "illuminate/config": "~5.7.0|~5.8.0",
-        "illuminate/database": "~5.7.0|~5.8.0",
-        "illuminate/support": "~5.7.0|~5.8.0",
+        "illuminate/config": "~5.7.0|~5.8.0|^6.0|^7.0",
+        "illuminate/database": "~5.7.0|~5.8.0|^6.0|^7.0",
+        "illuminate/support": "~5.7.0|~5.8.0|^6.0|^7.0",
         "spatie/string": "^2.1"
     },
     "require-dev": {
